2022 summer publications and announcements

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,44 @@
+@article{lim_community_engaged_heat_resilience_2022,
+	title = {Community-engaged heat resilience planning: Lessons from a youth smart city STEM program},
+	volume = {226},
+	issn = {},
+	url = {https://www.sciencedirect.com/science/article/pii/S0169204622001463},
+	doi = {10.1016/j.landurbplan.2022.104497},
+	abstract = {While recognition of the dangers of extreme heat in cities continues to grow, heat resilience remains a relatively new area of urban planning. One barrier to the creation and successful implementation of neighborhood-scale heat resilience plans has been a lack of reliable strategies for resident engagement. In this research, the authors designed a two-week summer STEM module for youth ages 12 to 14 in Roanoke, Virginia in the Southeastern United States. Participants collected and analyzed temperature and thermal comfort data of varying types, including from infrared thermal cameras and point sensors, handheld weather sensors, drones, and satellites, vehicle traverses, and student peer interviews. Based on primary data gathered during the program, we offer insights that may assist planners seeking to engage residents in neighborhood-scale heat resilience planning efforts. These lessons include recognizing: (1) the problem of heat in neighborhoods and the social justice aspects of heat distribution may not be immediately apparent to residents; (2) a need to shift perceived responsibility of heat exposure from the personal and home-based to include the social and landscape-based; (3) the inextricability of solutions for thermal comfort from general issues of safety and comfort in neighborhoods; and (4) that smart city technologies and high resolution data are helpful “hooks” to engagement, but may be insufficient for shifting perception of heat as something that can be mitigated through decisions about the built environment.},
+	language = {en},
+	urldate = {2022-06-13},
+	journal = {Landscape and Urban Planning},
+	author = {Lim, Theodore C. and Wilson, Bev and Grohs, Jacob R. and Pingel, Thomas J.},
+	month = oct,
+	year = {2022},
+	keywords = {},
+	pages = {},
+	file = {},
+	pdf = {Lim et al. - 2022 - Community-engaged heat resilience planning Lesson.pdf},
+	html = {https://www.sciencedirect.com/science/article/pii/S0169204622001463},
+	selected={true},
+}
+
+@article{sanchez_ai_urbanplanning_2022,
+	title = {The prospects of artificial intelligence in urban planning},
+	volume = {},
+	issn = {},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/12265934.2022.2102538},
+	doi = {10.1080/12265934.2022.2102538},
+	abstract = {Over the past several decades, urban planning has considered a variety of advanced analysis methods with greater and lesser degrees of adoption. Geographic Information Systems (GIS) is probably the most notable, with others such as database management systems (DBMS), decision support systems (DSS), planning support systems (PSS), and expert systems (ES), having mixed levels of recognition and acceptance (Kontokosta, C. E. (2021). Urban informatics in the science and practice of planning. Journal of Planning Education and Research, 41(4), 382–395. doi:10.1177/0739456X18793716; Yigitcanlar, T., Desouza, K. C., Butler, L., & Roozkhosh, F. (2020). Contributions and risks of artificial intelligence (AI) in building smarter cities: Insights from a systematic review of the literature. Energies, 13(6), 1473). Advances in information technologies have moved very slowly in the field of urban planning, more recently concerning ‘smart city’ technologies while revolutionizing other domains, such as consumer goods and services. Baidu, Amazon, Netflix, Google, and many others are using these technologies to gain insights into consumer behaviour and characteristics and improve supply chains and logistics. This is an opportune time for urban planners to consider the application of AI-related techniques given vast increases in data availability, increased processing speeds, and increased popularity and development of planning related applications. Research on these topics by urban planning scholars has increased over the past few years, but there is little evidence to suggest that the results are making it into the hands of professional planners (Batty, M. (2018). Artificial intelligence and smart cities. Environment and Planning B: Urban Analytics and City Science, 45(1), 3–6; Batty, M. (2021). Planning education in the digital age. Environment and Planning B: Urban Analytics and City Science, 48(2), 207–211). Others encourage planners to leverage the ubiquity of data and advances in computing to enhance redistributive justice in information resources and procedural justice in decision-making among marginalized communities (Boeing, G., Besbris, M., Schachter, A., & Kuk, J. (2020). Housing search in the Age of Big data: Smarter cities or the same Old blind spots? Housing Policy Debate, 31(1), 112–126; Goodspeed, R. (2015). Smart cities: Moving beyond urban cybernetics to tackle wicked problems. Cambridge journal of regions, Economy and Society, 8(1), 79–92). This article highlights findings from a recent literature review on AI in planning and discusses the results of a national survey of urban planners about their perspectives on AI adoption and concerns they have expressed about its broader use in the profession. Currently, the outlook is mixed, matching how urban planners initially viewed the early stages of computer adoption within the profession. And yet today, personal computers are essential to any job.},
+	language = {en},
+	urldate = {2022-10-27},
+	journal = {International Journal of Urban Sciences},
+	author = {Sanchez, Tom and Shumway, Hannah and Gordner, Trey and Lim, Theodore},
+	month = jul,
+	year = {2022},
+	keywords = {},
+	pages = {},
+	file = {},
+	pdf = {2022_Sanchez_etal_AI_Urban_Planning.pdf},
+	html = {https://www.tandfonline.com/doi/abs/10.1080/12265934.2022.2102538},
+}
+
 @article{kianmehr_envimet_2022,
 	title = {Quantifying Interactive Cooling Effects of Morphological Parameters and Vegetation-Related Landscape Features during an Extreme Heat Event},
 	volume = {10},
