spring updates: ayda's paper, my wsls story, and jack carroll's poster

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,21 +1,23 @@
-@article{lim_community_engaged_heat_resilience_2022,
-	title = {Community-engaged heat resilience planning: Lessons from a youth smart city STEM program},
-	volume = {226},
+
+
+@article{kianmehr_comparison_temp_sources_2023,
+	title = {Comparison of different spatial temperature data sources and resolutions for use in understanding intra-urban heat variation},
+	volume = {},
 	issn = {},
-	url = {https://www.sciencedirect.com/science/article/pii/S0169204622001463},
-	doi = {10.1016/j.landurbplan.2022.104497},
-	abstract = {While recognition of the dangers of extreme heat in cities continues to grow, heat resilience remains a relatively new area of urban planning. One barrier to the creation and successful implementation of neighborhood-scale heat resilience plans has been a lack of reliable strategies for resident engagement. In this research, the authors designed a two-week summer STEM module for youth ages 12 to 14 in Roanoke, Virginia in the Southeastern United States. Participants collected and analyzed temperature and thermal comfort data of varying types, including from infrared thermal cameras and point sensors, handheld weather sensors, drones, and satellites, vehicle traverses, and student peer interviews. Based on primary data gathered during the program, we offer insights that may assist planners seeking to engage residents in neighborhood-scale heat resilience planning efforts. These lessons include recognizing: (1) the problem of heat in neighborhoods and the social justice aspects of heat distribution may not be immediately apparent to residents; (2) a need to shift perceived responsibility of heat exposure from the personal and home-based to include the social and landscape-based; (3) the inextricability of solutions for thermal comfort from general issues of safety and comfort in neighborhoods; and (4) that smart city technologies and high resolution data are helpful “hooks” to engagement, but may be insufficient for shifting perception of heat as something that can be mitigated through decisions about the built environment.},
+	url = {https://www.sciencedirect.com/science/article/pii/S2210670723002305?via%3Dihub},
+	doi = {10.1016/j.scs.2023.104619},
+	abstract = {In this study, we investigate the compatibility of specific vulnerability indicators and heat exposure data and the suitability of spatial temperature-related data at a range of resolutions, to represent spatial temperature variations within cities using data from Atlanta, Georgia. For this purpose, we include various types of known and theoretically based vulnerability indicators such as specific street-level landscape features and urban form metrics, population-based and zone-based variables as predictors, and different measures of temperature, including air temperature (as vector-based data), land surface temperature (at resolution ranges from 30 m to 305 m), and mean radiant temperature (at resolution ranges from 1 m to 39 m) as dependent variables. Using regression analysis, we examine how different sets of predictors and spatial resolutions can explain spatial heat variation. Our findings suggest that the lower resolution of land surface temperature data, up to 152 m, and mean radiant temperature data, up to 15 m, may still satisfactorily represent spatial urban temperature variation caused by landscape elements. The results of this study have important implications for heat-related policies and planning by providing insights into the appropriate sets of data and relevant resolution of temperature measurements for representing spatial urban heat variations.},
 	language = {en},
-	urldate = {2022-06-13},
-	journal = {Landscape and Urban Planning},
-	author = {Lim, Theodore C. and Wilson, Bev and Grohs, Jacob R. and Pingel, Thomas J.},
-	month = oct,
-	year = {2022},
+	urldate = {2023-05-2},
+	journal = {Sustainable Cities and Society},
+	author = {Kianmehr, Ayda and Lim, Theodore C. and Li, Xiaojiang},
+	month = apr,
+	year = {2023},
 	keywords = {},
 	pages = {},
 	file = {},
-	pdf = {Lim et al. - 2022 - Community-engaged heat resilience planning Lesson.pdf},
-	html = {https://www.sciencedirect.com/science/article/pii/S0169204622001463},
+	pdf = {},
+	html = {https://www.sciencedirect.com/science/article/pii/S2210670723002305?via%3Dihub},
 	selected={true},
 }
 
