removed old projects, updated with new sesmo paper. changed layout of 'projects' page to 2 columns. later need to figure out how to widen tiles...

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,25 @@
 
+@article{lim_et_al_SESMO_2023,
+	title = {Recognizing political influences in participatory social-ecological systems modeling},
+	volume = {5},
+	issn = {},
+	url = {https://sesmo.org/article/view/18509},
+	doi = {10.18174/sesmo.18509},
+	abstract = {Stakeholder participation in social-ecological systems (SES) modeling is increasingly considered a desirable way to elicit diverse sources of knowledge about SES behavior and to promote inclusive decision-making in SES. Understanding how participatory modeling processes function in the context of long-term adaptive management of SES may allow for better design of participatory processes to achieve the intended outcomes of inclusionary knowledge, representativeness, and social learning, while avoiding unintended outcomes. Long-term adaptive management contexts often include political influences -- attempts to shift or preserve power structures and authority, and efforts to represent the political and economic interests of stakeholders -- in the computer models that are used to shape policy making and implementation. In this research, we examine a period that included a major transition in the watershed model used for management of the Chesapeake Bay in the United States. The Chesapeake Bay watershed model has been in development since the 1980s, and is considered by many to be an exemplary case of participatory modeling. We use documentary analysis and interviews with participants involved in the model application and development transition to reveal a variety of ways in which participatory modeling may be subject to different kinds of political influences, some of which resulted in unintended outcomes, including: perceptions of difficulty updating the model in substantive ways, “gaming” of the model/participatory process by stakeholders, and increasing resistance against considering uncertainty in the system not captured by the model. This research suggests unintended or negative outcomes may be associated with both participatory decision-making and stakeholder learning even though they are so often touted as the benefits of participatory modeling. We end with a hypothesis that further development of a theory of computer model governance to bridge model impact and broader theories of environmental governance at the science-policy interface may result in improved SES modeling outcomes.},
+	language = {en},
+	urldate = {2023-05-18},
+	journal = {Socio-Environmental Systems Modelling},
+	author = {Lim, Theodore C. and Glynn, Pierre D. and Shenk, Gary W. and Bitterman, Patrick and Guillaume, Joseph H.W. and Little, John C and Webster D.G.},
+	month = may,
+	year = {2023},
+	keywords = {},
+	pages = {},
+	file = {},
+	pdf = {2023_Lim_politicalinfluencesinparticipatorymodeling.pdf},
+	html = {https://sesmo.org/article/view/18509},
+	selected={true},
+}
+
 
 @article{kianmehr_comparison_temp_sources_2023,
 	title = {Comparison of different spatial temperature data sources and resolutions for use in understanding intra-urban heat variation},
@@ -16,9 +37,30 @@
 	keywords = {},
 	pages = {},
 	file = {},
-	pdf = {},
+	pdf = {2023_Kianmehr_Comparisontempdata.pdf},
 	html = {https://www.sciencedirect.com/science/article/pii/S2210670723002305?via%3Dihub},
-	selected={true},
+	selected={false},
+}
+
+@article{lim2022_community_engaged_heat_youth,
+	title = {Community-engaged heat resilience planning: Lessons from a youth smart city STEM program},
+	volume = {226},
+	issn = {},
+	url = {https://www.sciencedirect.com/science/article/pii/S0169204622001463},
+	doi = {10.1016/j.landurbplan.2022.104497},
+	abstract = {While recognition of the dangers of extreme heat in cities continues to grow, heat resilience remains a relatively new area of urban planning. One barrier to the creation and successful implementation of neighborhood-scale heat resilience plans has been a lack of reliable strategies for resident engagement. In this research, the authors designed a two-week summer STEM module for youth ages 12 to 14 in Roanoke, Virginia in the Southeastern United States. Participants collected and analyzed temperature and thermal comfort data of varying types, including from infrared thermal cameras and point sensors, handheld weather sensors, drones, and satellites, vehicle traverses, and student peer interviews. Based on primary data gathered during the program, we offer insights that may assist planners seeking to engage residents in neighborhood-scale heat resilience planning efforts. These lessons include recognizing: (1) the problem of heat in neighborhoods and the social justice aspects of heat distribution may not be immediately apparent to residents; (2) a need to shift perceived responsibility of heat exposure from the personal and home-based to include the social and landscape-based; (3) the inextricability of solutions for thermal comfort from general issues of safety and comfort in neighborhoods; and (4) that smart city technologies and high resolution data are helpful “hooks” to engagement, but may be insufficient for shifting perception of heat as something that can be mitigated through decisions about the built environment.},
+	language = {en},
+	urldate = {2022-06-22},
+	journal = {Landscape and Urban Planning},
+	author = {Lim, Theodore C. and Wilson, Bev and Grohs, Jacob R. and Pingel Thomas J.},
+	month = oct,
+	year = {2022},
+	keywords = {},
+	pages = {},
+	file = {},
+	pdf = {2022LimCommunity-engaged_heat_planning.pdf},
+	html = {https://www.sciencedirect.com/science/article/pii/S0169204622001463},
+	selected = {true}
 }
 
 @article{sanchez_ai_urbanplanning_2022,
@@ -116,7 +158,7 @@
 	file = {Full Text PDF:/home/tclim/Zotero/storage/I3IPW7GV/Lim et al. - 2022 - Technoeconomic Analysis of Negative Emissions Bioe.pdf:application/pdf},
 	pdf = {2022_es&t_lim_etal_local_scale_beccs_accepted_manusc.pdf},
 	html = {https://pubs.acs.org/doi/full/10.1021/acs.est.1c03478},
-	selected={true},
+	selected={false},
 }
 
 
