--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,45 @@
+@article{edmonds_chimaera,
+	title = {Chimaera Modelling – when the modellers must reconcile inconsistent elements or purposes},
+	volume = {6},
+	issn = {},
+	url = {https://sesmo.org/article/view/18593},
+	doi = {10.18174/sesmo.18593},
+	abstract = {Socio-Ecological System modelling projects are becoming increasingly complicated, with multiple actors and aspects being the norm. Such projects can cause problems for the modellers when this involves different elements, goals, philosophies, etc., all pulling in different directions – we call this “Chimaera Modelling.” Although such situations are common when you talk to modellers, they do not seem to be explicitly discussed in the literature. In this paper, we attempt to turn this perceived “inside” phenomenon into an “outside” phenomenon and to start a debate to increase transparency among the modelling community. We discuss the different aspects which may be relevant to this problem to start this debate, including: the underlying philosophy, modelling goals, extent of choice the modellers have, different stages of modelling, and kinds of actors that are involved. We further map out some of the dimensions with which Chimaera Modelling connects. We briefly discuss these and propose to the community as a whole to work on their methodological development, feasibility, risks and applicability as their resolution is far beyond the scope of this paper. We end with a brief description of the broad possible approaches to such situations. Our main message is a call for recognition of Chimaera Modelling as a likely side-effect of multi-stakeholder, multi-purpose projects, and to take this into account proactively at the project team level and be transparent about the tensions and contradictions that underly such modelling.},
+	language = {en},
+	urldate = {},
+	journal = {Socio-Environmental Systems Modelling},
+	author = {Lim, Theodore C.},
+	month = ,
+	year = {2025},
+	keywords = {},
+	pages = {},
+	file = {},
+	pdf = {2025_Edmonds_ChimaeraModelling.pdf},
+	html = {},
+	selected={true},
+}
+
+@article{lim_nec_considerations,
+	title = {Necessary Considerations When Framing Urban Heat Resilience as an Infrastructure Issue},
+	volume = {90},
+	issn = {3},
+	url = {https://doi.org/10.1080/01944363.2023.2259358},
+	doi = {10.1080/01944363.2023.2259358},
+	abstract = {Conceptualizing urban heat resilience as an infrastructure problem emphasizes the urgency with which we must adapt to global climate change, but also risks ignoring the continued marginalization that vulnerable populations experience as a result of infrastructure decisions. In this Viewpoint, I use my experience with participatory action research (PAR) in building urban heat resilience to show the ways in which an infrastructure framing presents opportunities, and the ways in which planners a) need to be aware of infrastructure as socio-technical systems and b) recognize spatial networks of social capital to appropriately approach interventions that benefit those most likely to be adversely affected by rising temperatures in cities.},
+	language = {en},
+	urldate = {},
+	journal = {Journal of the American Planning Association},
+	author = {Lim, Theodore C.},
+	month = ,
+	year = {2024},
+	keywords = {},
+	pages = {},
+	file = {},
+	pdf = {2023_Lim_HeatInfra_JAPA.pdf},
+	html = {},
+	selected={true},
+}
+
 
 @article{lim_et_al_SESMO_2023,
 	title = {Recognizing political influences in participatory social-ecological systems modeling},
