--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,43 +1,65 @@
-@article{edmonds_chimaera,
-	title = {Chimaera Modelling – when the modellers must reconcile inconsistent elements or purposes},
+
+
+@article{edmonds_chimaera_2025,
+	title = {Chimaera {Modelling} – when the modellers must reconcile inconsistent elements or purposes},
 	volume = {6},
-	issn = {},
+	copyright = {Copyright (c) 2024 Bruce Edmonds, Gert Jan  Hofstede, Jennifer  Koch, Christophe  le Page, Theo  Lim, Melvin  Lippe, Beatrice  Nöldeke, Hedwig  van Delden},
+	issn = {2663-3027},
 	url = {https://sesmo.org/article/view/18593},
 	doi = {10.18174/sesmo.18593},
 	abstract = {Socio-Ecological System modelling projects are becoming increasingly complicated, with multiple actors and aspects being the norm. Such projects can cause problems for the modellers when this involves different elements, goals, philosophies, etc., all pulling in different directions – we call this “Chimaera Modelling.” Although such situations are common when you talk to modellers, they do not seem to be explicitly discussed in the literature. In this paper, we attempt to turn this perceived “inside” phenomenon into an “outside” phenomenon and to start a debate to increase transparency among the modelling community. We discuss the different aspects which may be relevant to this problem to start this debate, including: the underlying philosophy, modelling goals, extent of choice the modellers have, different stages of modelling, and kinds of actors that are involved. We further map out some of the dimensions with which Chimaera Modelling connects. We briefly discuss these and propose to the community as a whole to work on their methodological development, feasibility, risks and applicability as their resolution is far beyond the scope of this paper. We end with a brief description of the broad possible approaches to such situations. Our main message is a call for recognition of Chimaera Modelling as a likely side-effect of multi-stakeholder, multi-purpose projects, and to take this into account proactively at the project team level and be transparent about the tensions and contradictions that underly such modelling.},
 	language = {en},
-	urldate = {},
+	urldate = {2025-01-07},
 	journal = {Socio-Environmental Systems Modelling},
-	author = {Lim, Theodore C.},
-	month = ,
+	author = {Edmonds, Bruce and Hofstede, Gert Jan and Koch, Jennifer and Page, Christophe le and Lim, Theo and Lippe, Melvin and Nöldeke, Beatrice and Delden, Hedwig van},
+	month = jan,
 	year = {2025},
-	keywords = {},
-	pages = {},
-	file = {},
-	pdf = {2025_Edmonds_ChimaeraModelling.pdf},
-	html = {},
+	keywords = {participation, complex projects, inter-subjectivity, multi-actor, project management},
+	pages = {18593--18593},
+	pdf = {2025_Edmonds_ChimaeraModelling.pdf}, 
 	selected={true},
 }
 
-@article{lim_nec_considerations,
-	title = {Necessary Considerations When Framing Urban Heat Resilience as an Infrastructure Issue},
+
+@article{lim_necessary_2024,
+	title = {Necessary {Considerations} {When} {Framing} {Urban} {Heat} {Resilience} as an {Infrastructure} {Issue}},
 	volume = {90},
-	issn = {3},
+	issn = {0194-4363},
 	url = {https://doi.org/10.1080/01944363.2023.2259358},
 	doi = {10.1080/01944363.2023.2259358},
 	abstract = {Conceptualizing urban heat resilience as an infrastructure problem emphasizes the urgency with which we must adapt to global climate change, but also risks ignoring the continued marginalization that vulnerable populations experience as a result of infrastructure decisions. In this Viewpoint, I use my experience with participatory action research (PAR) in building urban heat resilience to show the ways in which an infrastructure framing presents opportunities, and the ways in which planners a) need to be aware of infrastructure as socio-technical systems and b) recognize spatial networks of social capital to appropriately approach interventions that benefit those most likely to be adversely affected by rising temperatures in cities.},
-	language = {en},
-	urldate = {},
+	number = {3},
+	urldate = {2023-11-01},
 	journal = {Journal of the American Planning Association},
 	author = {Lim, Theodore C.},
-	month = ,
 	year = {2024},
-	keywords = {},
-	pages = {},
-	file = {},
+	note = {Publisher: Routledge
+\_eprint: https://doi.org/10.1080/01944363.2023.2259358},
+	keywords = {participatory action research, heat resilience, climate justice, infrastructure planning, resilience implementation gap},
+	pages = {568--575},
 	pdf = {2023_Lim_HeatInfra_JAPA.pdf},
-	html = {},
 	selected={true},
+}
+
+
+@article{barua_urban_2023,
+	title = {Urban thermal map design considerations: color, shading, and resolution},
+	volume = {0},
+	issn = {1523-0406},
+	shorttitle = {Urban thermal map design considerations},
+	url = {https://doi.org/10.1080/15230406.2023.2267418},
+	doi = {10.1080/15230406.2023.2267418},
+	abstract = {While satellite-based remote sensing techniques are often used for studying and visualizing the heat distribution in cities, they are limited in terms of spatial resolution, view bias, and revisit times. In comparison, modern Unmanned Aerial Vehicles (UAVs) equipped with infrared sensors allow very fine-scale (cm) data to be collected over smaller areas. We present a user study (n = 66) that outlines how satellite and drone-sourced thermal pseudo-color images compare in terms of map reading performance on three representative map reading tasks, how the choice of colormap affects map reading, and how a new shading augmentation to thermal maps based on high-resolution digital surface models can support interaction. Additionally, users provided explicit preferences indicating an inclination toward the shading augmentation, for the recently designed rainbow-style colormap turbo, and the cmocean thermal/FLIR ironbow colormap. However, we detail how user preferences and map reading performance are not always well aligned and are linked to issues of information content and visual clutter.},
+	number = {0},
+	urldate = {2023-11-01},
+	journal = {Cartography and Geographic Information Science},
+	author = {Barua, Gunjan and Pingel, Thomas and Lim, Theodore},
+	year = {2023},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/15230406.2023.2267418},
+	keywords = {Colormaps, perception study, structure from motion, thermal maps, urban heat Island},
+	pages = {1--16},
+	file = {Full Text PDF:C\:\\Users\\tlim05\\Zotero\\storage\\SNM9AXUI\\Barua et al. - 2023 - Urban thermal map design considerations color, sh.pdf:application/pdf},
 }
 
 
@@ -222,7 +244,7 @@
 	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/9XWPXYGI/Lim - 2021 - Patterns in environmental priorities revealed thro.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/4DVCNAL7/S0736585321001179.html:text/html},
 	pdf = {2021_tele_patterns_env_priorities_odps_accepted_manuscript.pdf},
 	html = {https://www.sciencedirect.com/science/article/pii/S0736585321001179},
-	selected={true},
+	selected={false},
 }
 
 @article{lim_model_2021,
@@ -241,7 +263,7 @@
 	keywords = {Emulation model, Environmental management, Science-action interface, Surrogate model},
 	pages = {104928},
 	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/WG2J9QJ6/Lim - 2021 - Model emulators and complexity management at the e.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/7WK3AZBK/S1364815220309853.html:text/html},
-  selected={true},
+  selected={false},
   pdf = {2021_em&s_emulation_env_sci_mgmt_preprint.pdf},
   html = {http://www.sciencedirect.com/science/article/pii/S1364815220309853}
 }
